[package]
name = "db-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.4.0"
tokio = "1.24.1"
cursive_tree_view = "0.8.0"
futures = "0.3.28"
owning_ref = "0.4.1"

[dependencies.cursive]
version = "0.20"
default-features = false
features = ["crossterm-backend"]
